<resources>
    <string name="month_name_format">\nLLLL月\nyyyy</string>
    <string name="app_name">明宇酒店</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="back">返回</string>
    <string name="online_booking">客房预订</string>
    <string name="order">预订</string>
    <string name="ming_yu">明宇会&#160;&#160;&#160;</string>
    <string name="special_offers">优惠精选</string>
    <string name="more_news">更多资讯</string>
    <string name="all_hotels">全国酒店</string>
    <string name="about_mingyu">关于明宇</string>
    <string name="catering_entertainment">餐饮娱乐</string>
    <string name="register">注册</string>
    <string name="phone_booking">电话预订</string>
    <string name="destination">目的地:</string>
    <string name="choice_hotel">选择酒店:</string>
    <string name="check_in_data">入住日期:</string>
    <string name="guests_num">宾客数:</string>
    <string name="check_out_data">离店日期:</string>
    <string name="room_num">房间数:</string>
    <string name="member">会员</string>
    <string name="no_member">非会员</string>
    <string name="user_agreement">协议用户</string>
    <string name="check_orders">查看/更改订单</string>
    <string name="quick_order">立即预订</string>
    <string name="card_type">类型：</string>
    <string name="card_num">卡号：</string>
    <string name="card_psw">密码：</string>
    <string name="agreement_num">协议号：</string>
    <string name="search_order">查找预订</string>
    <string name="hotel_list">酒店列表</string>
    <string name="around_hotel">周边酒店</string>
    <string name="room_price">房型列表</string>
    <string name="hotel_map">酒店地图</string>
    <string name="more_hotelintro">酒店详情</string>
    <string name="more_hotelcomment">酒店点评</string>
    <string name="name">姓名：</string>
    <string name="first_name">姓氏</string>
    <string name="last_name">名字</string>
    <string name="call">称呼：</string>
    <string name="mr">先生</string>
    <string name="mrs">女士</string>
    <string name="nationatity">国籍：</string>
    <string name="language">语言：</string>
    <string name="id_num">身份证号</string>
    <string name="office_tel">办公室电话：</string>
    <string name="mobile_num">手机号：</string>
    <string name="fax">传真：</string>
    <string name="detail_address">详细地址：</string>
    <string name="postal_code">邮编</string>
    <string name="check_no">验证码：</string>
    <string name="regist_now">立即注册</string>
    <string name="submit">提交</string>
    <string name="currentPwd">当前密码</string>
    <string name="newPwd">新密码</string>
    <string name="confirmPwd">确认新密码</string>
    <string name="modifyPwd">找回密码</string>
    <string name="changePwd">修改密码</string>
    <string name="giftShop">礼品商城</string>
    <string name="check">确定</string>
    <string name="settings">设置</string>
    <string name="update">升级</string>
    <string name="check_update">查询升级</string>
    <string name="download">下载</string>
    <string name="install">安装</string>
    <string name="result">返回值</string>
    <string name="launch_preferences">启动设置</string>
    <string name="preference_attributes">属性设置</string>
    <string name="global_preference">全局设置</string>
    <string name="global_preference_summary">安全支付服务和DEMO的通用设置</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string-array name="launch_list_entries">
        <item>外部商户订单</item>
        <item>远程订单</item>
    </string-array>
    <string name="order_mode">订单模式</string>
    <string name="popup_result">显示返回值</string>
    <string name="result_status_title">Result Status : </string>
    <string name="memo_title">Memo : </string>
    <string name="result_title">Result : </string>
    <string name="check_result_title">Check Sign Result : </string>
    <string name="external_token_title">External Token</string>
    <string name="trade_number_title">Trade Number</string>
    <string name="payPhaseId_title">Pay PhaseId</string>
    <string name="taobao_pay">订单支付</string>
    <string name="taobao_add">增加订单</string>
    <string name="taobao_reset">订单重置</string>
    <string name="start_order">打开订单页面</string>
    <string name="not_null">不能为空</string>
    <string name="extern_partner">外部商户订单</string>
    <string name="user_id">USER ID</string>
    <string name="btn_logon">快速登录</string>
    <string name="data_auth">数据授权</string>
    <string name="gender">性别</string>
    <string name="certinfo">证件</string>
    <string name="email">邮箱</string>
    <string name="mobile">电话</string>
    <string name="address">地址</string>
    <string name="logonId">LogonId</string>
    <string name="OPERATE_SUCCESS">操作成功</string>
    <string name="FAIL_TO_VERIFY">session验证失败</string>
    <string name="OTHER_ERROR">其他错误</string>
    <string name="WRONG_CARDNUMBER">卡号错误</string>
    <string name="WRONG_CARD_PASSWORD">密码错误</string>
    <string name="CARD_OUT_OF_DATE">卡过期  </string>
    <string name="WRONG_COMPANY_RESEVER_ACCOUNT">公司预订账号错误</string>
    <string name="WRONG_MEMBER_CARDNUMBER">会员卡号错误</string>
    <string name="RESEVER_NUMBER_INEXISTENCE">订单号不存在</string>
    <string name="WRONG_EMAIL">email错误</string>
    <string name="WRONG_CUSTOMER_TYPE">客人类型错误</string>
    <string name="STATUS_DEV_NO_AUTHORIZED">未鉴权</string>
    <string name="STATUS_DEV_AUTHORIZED_TIME_OUT">鉴权超时</string>
    <string name="UNAUTHORIZED">权限不够</string>
    <string name="STATUS_INTENAL_ERROR">网络错误 </string>
    <string name="VALIDATOR_CONNECT_TIMEOUT">链接超时</string>
    <string-array name="province_item">
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        
    </string-array>
    <string-array name="beijin_province_item">
        <item>北京</item>
    </string-array>
    <string-array name="tianjin_province_item">
        <item>天津</item>
    </string-array>
    <string-array name="heibei_province_item">
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="shanxi1_province_item">
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="neimenggu_province_item">
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善盟</item>
    </string-array>
    <string-array name="liaoning_province_item">
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="jilin_province_item">
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="heilongjiang_province_item">
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="shanghai_province_item">
        <item>上海</item>
    </string-array>
    <string-array name="jiangsu_province_item">
        <item>南京</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="zhejiang_province_item">
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>绍兴</item>
        <item>金华</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
        <item>丽水</item>
    </string-array>
    <string-array name="anhui_province_item">
        <item>合肥</item>
        <item>芜湖</item>
        <item>蚌埠</item>
        <item>淮南</item>
        <item>马鞍山</item>
        <item>淮北</item>
        <item>铜陵</item>
        <item>安庆</item>
        <item>黄山</item>
        <item>滁州</item>
        <item>阜阳</item>
        <item>宿州</item>
        <item>巢湖</item>
        <item>六安</item>
        <item>亳州</item>
        <item>池州</item>
        <item>宣城</item>
    </string-array>
    <string-array name="fujian_province_item">
        <item>福州</item>
        <item>厦门</item>
        <item>莆田</item>
        <item>三明</item>
        <item>泉州</item>
        <item>漳州</item>
        <item>南平</item>
        <item>龙岩</item>
        <item>宁德</item>
    </string-array>
    <string-array name="jiangxi_province_item">
        <item>南昌</item>
        <item>景德镇</item>
        <item>萍乡</item>
        <item>九江</item>
        <item>新余</item>
        <item>鹰潭</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>宜春</item>
        <item>抚州</item>
        <item>上饶</item>
    </string-array>
    <string-array name="shandong_province_item">
        <item>济南</item>
        <item>青岛</item>
        <item>淄博</item>
        <item>枣庄</item>
        <item>东营</item>
        <item>烟台</item>
        <item>潍坊</item>
        <item>济宁</item>
        <item>泰安</item>
        <item>威海</item>
        <item>日照</item>
        <item>莱芜</item>
        <item>临沂</item>
        <item>德州</item>
        <item>聊城</item>
        <item>滨州</item>
        <item>荷泽</item>
    </string-array>
    <string-array name="henan_province_item">
        <item>郑州</item>
        <item>开封</item>
        <item>洛阳</item>
        <item>平顶山</item>
        <item>安阳</item>
        <item>鹤壁</item>
        <item>新乡</item>
        <item>焦作</item>
        <item>濮阳</item>
        <item>许昌</item>
        <item>漯河</item>
        <item>三门峡</item>
        <item>南阳</item>
        <item>商丘</item>
        <item>信阳</item>
        <item>周口</item>
        <item>驻马店</item>
    </string-array>
</resources>