<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efecec"
    android:orientation="vertical" >

    <include layout="@layout/title_functionbar" />

    <ScrollView
        style="@style/RegisterStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/t_menuimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_FirstName"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_lastName"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/reg_Call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clipChildren="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/reg_Men"
                    style="@style/TitleTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/style_button_subject"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:text="@string/mr" />

                <RadioButton
                    android:id="@+id/reg_Women"
                    style="@style/TitleTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:button="@null"
                    android:drawableLeft="@drawable/style_button_subject"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:text="@string/mrs" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_num" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_IDNum"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="手机号码" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_PhoneNum"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="邮箱" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_EMail"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="地址" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_Address"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="#ec4849" />

                    <TextView
                        style="@style/TitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postal_code" />
                </LinearLayout>

                <EditText
                    android:id="@+id/reg_PostalCode"
                    style="@style/ContentEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    style="@style/TitleTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:button="@drawable/check_box"
                    android:gravity="center_vertical"
                    android:text="同意用户条款" />

                <TextView
                    android:id="@+id/reg_ViewTerm"
                    style="@style/TitleTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/checkBox1"
                    android:layout_alignBottom="@+id/checkBox1"
                    android:layout_alignParentRight="true"
                    android:text="查看条款" />
            </RelativeLayout>

            <Button
                android:id="@+id/reg_Register"
                style="@style/RedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="立即注册" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>